# goguo

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  package.json  rust-toolchain.toml  vitest.config.ts
docs/: architecture.md  test-level-matrix.md  test-trace-matrix.md
docs/adr/: 0001-record-architecture-decisions.md  0002-tauri-desktop-framework.md  0003-mihomo-subprocess-integration.md  0004-file-based-json-storage.md  0005-platform-adapter-pattern.md  0006-react-frontend-framework.md  0007-coordinated-mode-remote-adapter.md  0008-tauri-plugin-wdio-in-production-cargo-toml.md
docs/agent-configs/: Collie-opencode-goguo.md  Husky-codex-goguo.md  Teddy-claude-goguo.md
docs/insights/: 2026-04-29-goguo-strategy-discovery.md  2026-04-30-goguo-opp-002-baseline-restore-discovery.md  2026-04-30-goguo-strategy-discovery-approval.md  2026-05-10-goguo-opp-002-discovery-approval.md  2026-05-10-goguo-opp-002-discovery-review.md  2026-05-11-goguo-opp-001-discovery-approval.md  2026-05-11-goguo-opp-001-discovery-review.md  2026-05-11-goguo-opp-001-site-rules-discovery.md  2026-05-11-goguo-opp-003-discovery-approval.md  2026-05-11-goguo-opp-003-discovery-review.md  2026-05-11-goguo-opp-003-user-interaction-discovery.md  2026-05-11-goguo-opp-004-discovery-approval.md  2026-05-11-goguo-opp-004-discovery-review.md  2026-05-11-goguo-opp-004-wsl-support-discovery.md  2026-05-21-f002-coordinated-mode-gap-analysis.md  2026-05-21-spec-design-impl-drift-root-cause.md  2026-05-21-v010-spec-design-impl-drift-audit.md
docs/principles/: architectural-health-during-tdd.md  coding-principles.md  emergent-vs-upfront-patterns.md  hf-sdd-tdd-skill-design.md  methodology-coherence.md  sdd-artifact-layout.md  skill-anatomy.md  soul.md  test-design-section-template.md  testing-principles.md
docs/references/: 01-从控制角度看AI编程.md  02-结合控制论和微软Assert开源项目对本项目spec到代码实现的自动化测试思考.md
docs/reviews/: discovery-review-hf-doc-freshness-gate.md
docs/runbooks/: configuration-guide.md  deploy-wsl-windows-coordinated.md
docs/todo/: hf-evolution-gap-analysis.md  hf-staged-implementation-plan.md  phase-0-dry-run-demo.md
e2e/: .npmrc  README.md  package.json  tsconfig.json  vitest.config.ts  wdio.conf.ts
e2e/helpers/: env.ts  state.ts  tauri-ipc.ts  wait.ts
e2e/scripts/: benchmark.sh  lint-specs.mjs  (+4 more)
multi-agent-review-draft/: claude-draft.md  codex-draft.md  final-plan-claude.md  final-plan-codex.md  final-plan.md  opencode-draft.md
scripts/: test-feature.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/: command_executor.rs  linux.rs  linux_base.rs  mod.rs  windows.rs  windows_base.rs  windows_remote.rs  wsl.rs  wsl_remote.rs
src-tauri/src/commands/: baseline.rs  mod.rs  site_rules.rs
src-tauri/src/engines/: mod.rs  site_rule_engine.rs
src-tauri/src/managers/: baseline_manager.rs  config_manager.rs  deployment_manager.rs  mihomo_manager.rs  mod.rs
src-tauri/src/models/: audit.rs  baseline.rs  config.rs  mod.rs  node.rs  probe.rs  recovery.rs  site.rs  subscription.rs
src-tauri/src/services/: audit_logger.rs  ip_cache.rs  ip_scanner.rs  mihomo_config_manager.rs  mod.rs  node_pool.rs  probe_service.rs  proxy_guard.rs  recovery.rs  rule_generator.rs  rule_verifier.rs  ruleset_writer.rs  site_definition_store.rs  sleep_wake.rs  subscription_parser.rs  url_parser.rs  wsl_detector.rs  wsl_network_strategy.rs
src-tauri/src/storage/: audit_storage.rs  baseline_storage.rs  mod.rs
src-tauri/tests/: integration_baseline.rs  integration_site_rules.rs  integration_wsl_linux.rs
src-tauri/tests/common/: mod.rs
src-tauri/tests/fr_acceptance/: contract.rs  f001_baseline.rs  f002_wsl.rs  f003_site_rules.rs  f004_backend.rs  mod.rs  pipeline.rs
(+395 files in other folders)
