[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
needless_return = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
