[package]
name = "goguo"
version = "0.1.0"
description = "GoGuo - PC network reachability diagnosis and baseline restore"
authors = ["GoGuo Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/goguo/goguo"
readme = "../../README.md"
keywords = ["proxy", "network", "baseline", "tauri"]
categories = ["network-programming", "desktop-app"]

[lib]
name = "goguo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
native-tls = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
glib = "0.18"
gio = "0.18"
gdk = "0.18"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
tempfile = "3"

[[test]]
name = "fr_acceptance"
path = "tests/fr_acceptance/mod.rs"

[lints]
workspace = true

